version/0.69/_sources/autoapi/pyedb/workflows/drc/drc/CopperBalance.rst.txt






:class:`CopperBalance`
======================


.. py:class:: pyedb.workflows.drc.drc.CopperBalance(/, **data: Any)

   Bases: :py:obj:`pydantic.BaseModel`


   
   Copper-density balance rule.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CopperBalance

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~name`
            - 
          * - :py:attr:`~max_percent`
            - 
          * - :py:attr:`~layers`
            - 






Import detail
-------------

.. code-block:: python

    from pyedb.workflows.drc.drc import CopperBalance


Attribute detail
----------------

.. py:attribute:: name
   :type:  str

.. py:attribute:: max_percent
   :type:  int

.. py:attribute:: layers
   :type:  List[str]





